Title, Favico changed and New Build

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" />
-        <title>Vanilla front-end</title>
+        <title>ImaGen - Vanilla</title>
+        <link rel="icon" href="images/favico.png" />
         <!-- <link rel="icon" href="favicon-test2.png" type="image/x-icon" /> -->
         <meta name="author" content="Thomas Dargon" />
         <meta
@@ -20,7 +21,7 @@
         
         <div id="img-container">
             <h1 class='lady-say'></h1>
-            <h2 class='welcome-msg'>Meet LadyP, Lady D and M. Tumblr, <br>
+            <h2 class='welcome-msg'>Meet Lady P, Lady D and M. Tumblr, <br>
                 you can ask them anything!</h2>
             <img class="random-img" src="images/start-img.jpg" />
             
